changed overflow property. Fixes #33

--- a/src/components/Info/ListOfWords/ListOfWords.css
+++ b/src/components/Info/ListOfWords/ListOfWords.css
@@ -1,4 +1,4 @@
 .ListOfWords {
   max-height: 230px;
-  overflow: scroll;
+  overflow: auto;
 }
